Further attempts to fix contrast issues

--- a/tool_db/static/css/style.css
+++ b/tool_db/static/css/style.css
@@ -175,7 +175,7 @@ iframe:hover {
 }
 
 .cancel-link {
-    color: #4a0000;
+    color: #ef9a9a;
 }
 
 .card-image {
